[package]
name = "zip_parser"
version = "0.2.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/remme123/zip_parser"
keywords = ["zip", "parser", "no_std", "stream"]
description = "A zip file format parser, supporting no_std environment, stream parsing, seeking."

[features]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "file_parsing"
required-features = ["std"]

[[example]]
name = "stream_parsing"
required-features = ["std"]