[package]
name = "zip_parser"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/remme123/zip_parser"
keywords = ["zip", "parser", "no_std"]
description = "A zip file format parser, supporting no_std environment, stream parsing and seeking."

[features]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"

[[example]]
name = "file_parsing"
required-features = ["std"]

[[example]]
name = "stream_parsing"
required-features = ["std"]